// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/compontent/posters/as-figure.vue Renders A new poster 1`] = `
<figure
  class="poster"
>
  <as-svg-stub
    as_stroke="false"
    immediate="false"
    itemid="/+16282281824/posters/559666932867"
    poster="[object Object]"
    slice="true"
    tabable="false"
    toggle_aspect="true"
  />
  <figcaption>
    
    <menu>
      <as-link-stub
        itemid="/+16282281824/posters/559666932867"
      />
      <as-download-stub
        itemid="/+16282281824/posters/559666932867"
      />
      <!--v-if-->
    </menu>
    
  </figcaption>
</figure>
`;

exports[`@/compontent/posters/as-figure.vue Renders A poster 1`] = `
<figure
  class="poster"
>
  <as-svg-stub
    as_stroke="false"
    immediate="false"
    itemid="/+16282281824/posters/559666932867"
    slice="true"
    tabable="false"
    toggle_aspect="true"
  />
  <figcaption>
    <!--v-if-->
  </figcaption>
</figure>
`;
